add this to git

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,8 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Blogs</h1>
-
-<table>
+<h1> this is the change </h1><able>
   <thead>
     <tr>
       <th>Title</th>
